<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividad_principal">

    <TextView
        android:id="@+id/etiTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/titulo_convertidor"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/lblMonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etiTitulo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/lbl_monto"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/campoMonto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_alignBaseline="@id/lblMonto"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_toEndOf="@id/lblMonto"
        android:importantForAutofill="no"
        android:hint="@string/hint_monto"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/lblOrigen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/campoMonto"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/lbl_origen"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Spinner
        android:id="@+id/listaOrigen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_alignBottom="@id/lblOrigen"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/lblOrigen"
        android:entries="@array/monedas" />

    <TextView
        android:id="@+id/lblDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblOrigen"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="24dp"
        android:text="@string/lbl_destino"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Spinner
        android:id="@+id/listaDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/lblDestino"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="-28dp"
        android:layout_toEndOf="@id/lblDestino"
        android:entries="@array/monedas"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/botonConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblDestino"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/boton_convertir" />

    <TextView
        android:id="@+id/etiResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/botonConvertir"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</RelativeLayout>
